--- a/app/src/main/res/layout/fragment_scout_post_match.xml
+++ b/app/src/main/res/layout/fragment_scout_post_match.xml
@@ -8,50 +8,10 @@
     >
 
 
-   <!--
-    <TextView
-        android:id="@+id/teamNumber"
-        android:layout_width="743dp"
-        android:layout_height="159dp"
-        android:layout_centerInParent="true"
-        android:gravity="center_horizontal|top"
-        android:text="@string/team_number"
-        android:textSize="70dp"
-        android:textColor="@color/red"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="200dp"
-        android:layout_centerHorizontal="true"
-/>
-    <TextView
-        android:id="@+id/endgame"
-        android:layout_width="189dp"
-        android:layout_height="70dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="545dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="275dp"
-        android:text="Endgame"
-        android:textSize="35dp"
-        android:gravity="center_horizontal|top"
-        android:textColor="@color/white"
-        />
-
-    <TextView
-        android:id="@+id/matchNumber"
-        android:layout_width="50dp"
-        android:layout_height="42dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="1200dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="250dp"
-        android:text="@string/match_number"
-        android:textSize="35dp"
-        android:gravity="center_horizontal|top"
-        />
--->
 
 
-    <LinearLayout
+
+<!--    <LinearLayout
         android:id="@+id/notes"
         android:layout_width="1250dp"
         android:layout_height="275dp"
@@ -79,6 +39,33 @@
 
             />
     </LinearLayout>
+-->
+
+    <LinearLayout
+        android:id="@+id/notes"
+        android:layout_width="1250dp"
+        android:layout_height="275dp"
+        android:layout_above="@+id/finish"
+        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/notes"
+            android:textSize="30sp"
+            android:textColor="@color/white"
+            />
+
+        <FrameLayout
+            android:id="@+id/notes_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+    </LinearLayout>
 
     <org.wildstang.wildrank.androidv2.views.scouting.ScoutingSpinnerView
         android:layout_width="500dp"
@@ -98,26 +85,14 @@
             android:layout_height="70dp"
             android:layout_marginBottom="15dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:text="End Scouting"
             android:textSize="35dp"
+            android:textColor="@color/white"
             android:background="#FE0000"
 
             />
-    <!--
-    <Button
-        android:id="@+id/Teleop"
-        android:layout_width="225dp"
-        android:layout_height="70dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="20dp"
-        android:text="Teleop"
-        android:textSize="35sp"
-        android:textColor="@color/white"
-        android:background="#0093FE"
-        />
-        -->
+
     </RelativeLayout>
