--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="material_red">#F44336</color>
     <color name="material_blue">#2196F3</color>
     <color name="material_blue_dark">#1976D2</color>
+    <color name="StrykeForce">#f2bb16</color>
 </resources>
