--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="colorPrimary">@color/material_blue</item>
-        <item name="colorPrimaryDark">@color/material_blue_dark</item>
+        <item name="colorPrimaryDark">@color/StrykeForce</item>
     </style>
 
     <style name="ScoutingWidget">
