--- a/app/src/main/res/layout/activity_app_setup.xml
+++ b/app/src/main/res/layout/activity_app_setup.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Welcome to WildRank!\n\nConnect a flash drive to set up the tablet."
+            android:text="Welcome to Stryke Force Scouting!\n\nConnect a flash drive to set up the tablet."
             android:textSize="40sp" />
 
         <ProgressBar
