--- a/app/src/main/res/layout/custom_view_counter.xml
+++ b/app/src/main/res/layout/custom_view_counter.xml
@@ -6,23 +6,32 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     card_view:cardCornerRadius="4dp">
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         style="@style/ScoutingWidget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusableInTouchMode="true">
 
-    <TextView
+        <RelativeLayout
+    android:id="@+id/labelContainer"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:visibility="visible"
+        >
+        <TextView
         android:id="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:textSize="20sp" />
 
-
+    </RelativeLayout>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_below="@+id/label"
+        android:layout_below="@+id/labelContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusableInTouchMode="true">
