--- a/app/src/main/res/layout/fragment_match_scouting_main.xml
+++ b/app/src/main/res/layout/fragment_match_scouting_main.xml
@@ -33,22 +33,32 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/begin_scouting"
             android:layout_centerInParent="true"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/match_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="64dp"
-                android:textSize="120sp" />
+                android:layout_marginBottom="5dp"
+                android:textSize="80dp" />
 
             <TextView
                 android:id="@+id/scouting_team"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="80sp" />
+                android:textSize="30dp"
+                android:layout_marginBottom="10dp"
 
+                />
+
+            <ImageView
+                android:id="@+id/scouting_team_photo"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/p1_2767"
+
+                />
         </LinearLayout>
 
         <Button
