--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,10 @@
         <item name="android:padding">8dp</item>
     </style>
 
+    <style name="MatchScoutingTeams">
+        <item name="android:textSize">20dp</item>
+
+
+    </style>
+
 </resources>
