Added Photos to the match selection screen
-Added photos to match selection screen.
-Found out that photos are stored in /wildrank/ in the internal storage of the tablet rather than the sqlite database.
-Added Picasso to assist with loading large image files.
-Added new placeholder image for match scouting

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_margin="16dp"
-                android:text="WildRank"
+                android:text="Stryke Force Scouting"
                 android:textColor="@color/white"
                 android:textSize="24sp" />
         </org.wildstang.wildrank.androidv2.views.SixteenNineAspectRatioLayout>
