--- a/app/src/main/res/layout/fragment_match_scouting_main.xml
+++ b/app/src/main/res/layout/fragment_match_scouting_main.xml
@@ -40,6 +40,7 @@
                 android:id="@+id/match_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:layout_marginBottom="5dp"
                 android:textSize="80dp" />
 
@@ -56,7 +57,7 @@
                 android:id="@+id/scouting_team_photo"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/p1_2767"
+                android:src="@drawable/frc_logo"
 
                 />
         </LinearLayout>
