Fixed Match Saving Error
-Added keys to Checkboxes to fix saving error.

- Found out that the team summaries is now broken due to new keys

--- a/app/src/main/res/layout/fragment_scout_autonomous.xml
+++ b/app/src/main/res/layout/fragment_scout_autonomous.xml
@@ -164,6 +164,7 @@
     android:layout_height="50dp"
     app:label="Docked"
     android:background="@color/white"
+    app:key="Docked"
     />
 
     <org.wildstang.wildrank.androidv2.views.scouting.ScoutingCheckboxView
@@ -173,6 +174,7 @@
         app:label="Balanced"
         android:background="@color/white"
         android:layout_marginLeft="30dp"
+        app:key="Balanced"
         />
 
     <org.wildstang.wildrank.androidv2.views.scouting.ScoutingCheckboxView
@@ -182,6 +184,7 @@
         app:label="Crossed Line"
         android:background="@color/white"
         android:layout_marginLeft="30dp"
+       app:key="CrossLine"
         />
 
 </LinearLayout>
